--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,4 +1,7 @@
-title: Rozenlaan
+resources:
+  !include lovelace/resources/resources.yaml
+
+title: Thuis
 views:
   - !include lovelace/00_home_view.yaml
   - !include lovelace/01_bedroom_view.yaml
