--- a/lovelace/01_bedroom_view.yaml
+++ b/lovelace/01_bedroom_view.yaml
@@ -4,3 +4,23 @@ icon: mdi:bed-empty
 cards:
   - type: light
     entity: light.desk_jelle
+  - type: entities
+    show_header_toggle: false
+    title: Workstation Jelle
+    entities:
+      - entity: switch.blitzwolf_1
+      - entity: binary_sensor.blitzwolf_1_button1
+      - entity: sensor.blitzwolf_1_energy_apparent_power
+      - entity: sensor.blitzwolf_1_energy_current
+      - entity: sensor.blitzwolf_1_energy_factor
+      - entity: sensor.blitzwolf_1_energy_power
+      - entity: sensor.blitzwolf_1_energy_reactivepower
+      - entity: sensor.blitzwolf_1_energy_totalstarttime
+      - entity: sensor.blitzwolf_1_energy_voltage
+      - entity: sensor.blitzwolf_1_status
+  - type: history-graph
+    title: Verbruik
+    entities:
+      - sensor.blitzwolf_1_energy_total
+      - sensor.blitzwolf_1_energy_yesterday
+      - sensor.blitzwolf_1_energy_today
