Add downstairs bathroom light

--- a/lovelace/00_home_view.yaml
+++ b/lovelace/00_home_view.yaml
@@ -11,3 +11,5 @@ cards:
         icon: mdi:lightbulb
       - entity: light.desk_jelle
         name: Bureau Jelle
+      - entity: light.toilet
+        name: WC
