--- a/lovelace/custom_header/configuration.yaml/configuration.yaml
+++ b/lovelace/custom_header/configuration.yaml/configuration.yaml
@@ -1,9 +1,8 @@
 shadow: false
 compact_mode: true
 hide_unused: true
-hide_config: true
-hide_raw: true
+
 # show_tabs: 'Home, bedroom'
-hidden_tab_redirect: false
-tab_container_css: 'max-width: 1425px !important; margin: 0 auto !important;'
-all_tabs_css: "width: 35px !important;"
+# hidden_tab_redirect: false
+# tab_container_css: 'max-width: 1425px !important; margin: 0 auto !important;'
+# all_tabs_css: "width: 35px !important;"
