--- a/lovelace/01_bedroom_view.yaml
+++ b/lovelace/01_bedroom_view.yaml
@@ -1,16 +1,35 @@
 title: Slaapkamer
 id: bedroom
-icon: mdi:bed-empty
+icon: mdi:desk
 panel: true
 cards:
   - type: custom:layout-card
     cards:
-      - type: light
-        entity: light.desk_jelle
-      - type: entity
-        entity: sensor.blitzwolf_1_energy_voltage
-      - type: entity
-        entity: sensor.blitzwolf_1_energy_current
+      - type: history-graph
+        title: Verbruik
+        icon: mdi:desk
+        entities:
+          - type: entity
+            entitiy: sensor.blitzwolf_1_energy_total
+      - type: vertical-stack
+        cards:
+          - type: horizontal-stack
+            cards:
+              - type: entity
+                entity: sensor.blitzwolf_1_energy_current
+                icon: mdi:battery
+                name: Stroom
+              - type: entity
+                entity: sensor.blitzwolf_1_energy_power
+                icon: mdi:power-plug
+                name: Wattage
+          - type: horizontal-stack
+            cards:
+              - type: light
+                entity: light.desk_jelle
+              - type: light
+                entity: light.desk_jelle_light
+                name: Bureau lamp
       - type: entities
         show_header_toggle: false
         title: Workstation Jelle
@@ -21,9 +40,5 @@ cards:
           - entity: sensor.blitzwolf_1_energy_reactivepower
           - entity: sensor.blitzwolf_1_energy_totalstarttime
           - entity: sensor.blitzwolf_1_status
-      - type: history-graph
-        title: Verbruik
-        entities:
-          - sensor.blitzwolf_1_energy_total
-          - sensor.blitzwolf_1_energy_yesterday
-          - sensor.blitzwolf_1_energy_today
+      - type: button
+        entity: binary_sensor.windowjelle_contact
