--- a/lovelace/custom_header/configuration.yaml
+++ b/lovelace/custom_header/configuration.yaml
@@ -1,9 +1,8 @@
 shadow: false
-compact_mode: true
+compact_mode: false
 hide_unused: true
 hide_config: true
 hide_raw: true
-#show_tabs: 'home, lights, scenes, dynamic_page, more_page'
 hidden_tab_redirect: false
 tab_container_css: 'max-width: 1425px !important; margin: 0 auto !important;'
 all_tabs_css: "width: 35px !important;"
