--- a/packages/yeelight.yaml
+++ b/packages/yeelight.yaml
@@ -1,6 +1,7 @@
 yeelight:
   devices:
     192.168.1.159:
-      name: Desk Jelle
+      name: yeelight desk
+      save_on_change: true
     192.168.1.40:
       name: Toilet
